Content removed and replaced with lorum ipsum to use in portfolio

--- a/index.html
+++ b/index.html
@@ -191,17 +191,16 @@
             </tr>
             <tr>
                 <td class="left-section" style="background-color: #1b1c1e;width: 50%;color: white;vertical-align: top;">
-                        <h2>Part Exchange?</h2>
-                        <p>Please remember to bring with you the following:</p>
+                        <h2>Apple pie soufflé wafer?</h2>
+                        <p>Cupcake ipsum dolor sit amet:</p>
                         <ul>
-                            <li>Current registration document (V5c)
-                                <br>(IMPORTANT) - By law we cannot accept a part exchange without a current V5c.</li>
-                            <li>MOT certificate (if applicable)</li>
-                            <li>Service history</li>
-                            <li>All keys</li>
-                            <li>Locking wheel nut key</li>
+                            <li>Donut gingerbread
+                                <br>candy canes sweet jelly muffin caramels</li>
+                            <li>Lemon drops muffin chocolate topping pastry halvah</li>
+                            <li>Jelly-o jelly beans cake chocolate</li>
+                            <li>Marshmallow halvah toffee</li>
                         </ul>
-                        <p>Your sales executive will complete an online notification to DVLA to advise of the transfer of the part exchange vehicle to us. Please do not contact DVLA yourself prior to bringing in your car to us.</p>
+                        <p>Apple pie soufflé wafer. Gummies ice cream cheesecake candy canes. Chocolate cake marshmallow brownie dessert.</p>
                     </td>
                 </tr>
                 <tr>
@@ -210,17 +209,16 @@
                 </tr>
                 <tr>
                     <td class="right-section" style="background-color: #1a4a8a;width: 50%;color: white;vertical-align: top;">
-                            <h2>FORD Pass</h2>
-                            <p>This fantastic new app assists with the management of your vehicle, covering areas such as:</p>
+                            <h2>Chupa chups lollipop</h2>
+                            <p>Bear claw caramels sugar plum cake gummi bears macaroon jelly:</p>
                             <ul>
-                                <li>Saving your dealership to your phone for quicker contact.</li>
-                                <li>Live news and traffic updates</li>
-                                <li>Quick find parking near you</li>
-                                <li>Link with Ford Credit</li>
-                                <li>Service bookings</li>
-                                <li>And many more</li>
+                                <li>Donut gingerbread
+                                    <br>candy canes sweet jelly muffin caramels</li>
+                                <li>Lemon drops muffin chocolate topping pastry halvah</li>
+                                <li>Jelly-o jelly beans cake chocolate</li>
+                                <li>Marshmallow halvah toffee</li>
                             </ul>
-                            <p>If you would like to feel the benefits of this app, please follow the link below where you will find more information.</p>
+                            <p>Apple pie soufflé wafer. Gummies ice cream cheesecake candy canes. Chocolate cake marshmallow brownie dessert.</p>
                     </td>
                 </tr>
         </table>
@@ -231,31 +229,29 @@
             <tr>
                 <td class="left-section" style="background-color: #1b1c1e;width: 50%;color: white;vertical-align: top;">
                     <img src="https://i.imgur.com/OJOFdxD.png" alt="gear-stick" class="gear-img" style="max-width: 100%;position: relative;z-index: 1;">
-                    <h2 style="padding: 10px 20px;">Part Exchange?</h2>
-                    <p style="padding: 10px 20px;">Please remember to bring with you the following:</p>
+                    <h2 style="padding: 10px 20px;">Apple pie soufflé wafer?</h2>
+                    <p style="padding: 10px 20px;">Cupcake ipsum dolor sit amet:</p>
                     <ul>
-                        <li>Current registration document (V5c)
-                            <br>(IMPORTANT) - By law we cannot accept a part exchange without a current V5c.</li>
-                        <li>MOT certificate (if applicable)</li>
-                        <li>Service history</li>
-                        <li>All keys</li>
-                        <li>Locking wheel nut key</li>
+                        <li>Donut gingerbread 
+                            <br>candy canes sweet jelly muffin caramels.</li>
+                        <li>Lemon drops muffin chocolate topping pastry halvah</li>
+                        <li>Jelly-o jelly beans cake chocolate</li>
+                        <li>Marshmallow halvah toffee</li>
                     </ul>
-                    <p style="padding: 10px 20px;">Your sales executive will complete an online notification to DVLA to advise of the transfer of the part exchange vehicle to us. Please do not contact DVLA yourself prior to bringing in your car to us.</p>
+                    <p style="padding: 10px 20px;">Apple pie soufflé wafer. Gummies ice cream cheesecake candy canes. Chocolate cake marshmallow brownie dessert.</p>
                 </td>
                 <td class="right-section" style="background-color: #1a4a8a;width: 50%;color: white;vertical-align: top;">
                     <img src="https://i.imgur.com/cJIMqqF.png" alt="ford-car" class="car-img" style="max-width: 100%;position: relative;z-index: 1;">
-                    <h2 style="padding: 10px 20px;">FORD Pass</h2>
-                    <p style="padding: 10px 20px;">This fantastic new app assists with the management of your vehicle, covering areas such as:</p>
+                    <h2 style="padding: 10px 20px;">Chupa chups lollipop</h2>
+                    <p style="padding: 10px 20px;">Bear claw caramels sugar plum cake gummi bears macaroon jelly:</p>
                     <ul>
-                        <li>Saving your dealership to your phone for quicker contact.</li>
-                        <li>Live news and traffic updates</li>
-                        <li>Quick find parking near you</li>
-                        <li>Link with Ford Credit</li>
-                        <li>Service bookings</li>
-                        <li>And many more</li>
+                        <li>Donut gingerbread 
+                            <br>candy canes sweet jelly muffin caramels.</li>
+                        <li>Lemon drops muffin chocolate topping pastry halvah</li>
+                        <li>Jelly-o jelly beans cake chocolate</li>
+                        <li>Marshmallow halvah toffee</li>
                     </ul>
-                    <p style="padding: 10px 20px;">If you would like to feel the benefits of this app, please follow the link below where you will find more information.</p>
+                    <p style="padding: 10px 20px;">Apple pie soufflé wafer. Gummies ice cream cheesecake candy canes. Chocolate cake marshmallow brownie dessert.</p>
                 </td>
             </tr>
         </table>
@@ -265,30 +261,30 @@
         <table class="heritage" style="width: 100%;text-align: center;border-spacing: 0px;">
             <tr>
                 <td class="ford-pass" style="background-image: url(https://i.imgur.com/bqgrkO4.png);background-color: #355e81;background-repeat: no-repeat;background-size: 100%;color: #fff;text-transform: uppercase;max-width: 100%;">
-                    <h1>www.fordpass.co.uk</h1>
+                    <h1>www.tootsieroll.co.uk</h1>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <p style="padding: 10px 30px;">Once you have downloaded and followed the steps to create an account, your sales executive can further advise you of the benefits of using this app when your arrive to pick up your new car.</p>
+                    <p style="padding: 10px 30px;">Cupcake ipsum dolor. Sit amet sweet roll pudding soufflé halvah. Powder caramels cookie. Sweet jelly beans halvah. Ice cream tootsie roll jelly-o pastry gingerbread powder cupcake. Croissant sweet bear claw marzipan pastry marshmallow jelly beans jelly beans cake. Toffee caramels cookie gummies gummies cake jelly beans cake.</p>
                     <img src="https://i.imgur.com/MFOsUlI.png" alt="our-heritage">
                     <h3>Our Heritage</h3>
-                    <p style="padding: 10px 30px;">Haynes of Maidstone is one of the very few family companies in the UK that has been in business over 200 years. Therefore, you can be assured that your vehicle comes with a wealth of history and a multi award winning team behind it. To celebrate this history, we have produced a quality enamel badge to display on your car, which yourself or one of the team can affix for you.
+                    <p style="padding: 10px 30px;">Muffin jujubes caramels cookie biscuit. Apple pie candy canes tart marzipan gummi bears pie pie sugar plum sweet. Tart marzipan bonbon chocolate cake bonbon sweet roll. Icing cupcake icing sesame snaps muffin gingerbread muffin oat cake. Gummi bears marshmallow toffee. Cheesecake apple pie bear claw pudding brownie croissant icing muffin sesame snaps.
                         <br>
-                        <br>Customers who proudly display this badge on their car will, in return, receive a 10% discount on any parts or accessories purchased from us. If this is of interest, please ask your sales executive for more details.
+                        <br>Tiramisu sesame snaps apple pie topping dragée croissant halvah. Carrot cake candy carrot cake dragée gingerbread tiramisu halvah oat cake gummi bears. Biscuit chocolate bar macaroon marshmallow jelly-o powder. Chocolate bar apple pie topping topping marzipan chocolate cake.
                         <br>
                         <br>See you very soon.
                         <br>
                         <br>
-                        <strong>Alex Hercock - Showroom Host</strong>
+                        <strong>Powder Muffin - Showroom Host</strong>
                     </p>
                 </td>
             </tr>
             <tr>
                 <td class="showroom" style="background-image: url(https://i.imgur.com/zUPv8DJ.png);background-repeat: no-repeat;background-size: 100%;height: 359px;color: #fff;">
                     <h1>Haynes Ford of Maidstone</h1>
-                    <h2>23 Ashford Road ME14 5DQ</h2>
-                    <p style="padding: 10px 30px;">www.haynesford.co.uk</p>
+                    <h2>Chocolate jelly-o dragée halvah</h2>
+                    <p style="padding: 10px 30px;">www.tootsieroll.co.uk</p>
                 </td>
             </tr>
         </table>
@@ -351,7 +347,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <p>Calls may be recorded for training and quality purposes. You are receiving this email because you opted in to receive information from Haynes Ford either via the website, in a showroom or when you purchased your vehicle. If you no longer wish to receive email communications from us please click the link at the top of the email to unsubscribe instantly. Privacy policy. Our postal address and registered office is Haynes House 23 Ashford Road, Maidstone, Kent, ME145DQ. Registered in England. Our company resgistration number is: 00048511. 25089.</p>
+                                <p>Bear claw marshmallow sugar plum brownie macaroon ice cream brownie cupcake. Chocolate icing chocolate bar. Muffin caramels liquorice toffee. Toffee icing candy bear claw. Gummies muffin candy oat cake tootsie roll jelly marzipan candy. Candy sugar plum pie topping sweet caramels topping gummies. Cookie cheesecake wafer oat cake jelly-o jelly gingerbread fruitcake tootsie roll.</p>
                             </td>
                         </tr>
                     </table></div>
